--- a/main.css
+++ b/main.css
@@ -11,8 +11,8 @@ h1 {
     margin-top: 0;
     margin-bottom: 0;
     text-align: center;
-    padding-bottom: %;
     font-size: 50pt;
+    color: white;
 }
 .pscore {
     justify-content: center;
@@ -20,6 +20,7 @@ h1 {
     margin-left: 17%;
     border: 5px solid rgb(228, 78, 78);
     font-size: 23pt;
+    color: white;
 }
 .cscore {
     justify-content: center;
@@ -27,11 +28,13 @@ h1 {
     margin-right: 17%;
     border: 5px solid rgb(228, 78, 78);
     font-size: 23pt;
+    color: white;
 }
 .msg{
     text-align: center;
     padding-top: 8%;
     font-size: 30pt;
+    color: white;
 }
 #rock {
     width: 15vh;
