--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ h1 {
 .msg{
     text-align: center;
     padding-top: 8%;
-    font-size: 27pt !important;
+    font-size: 27pt;
     color: white;
 }
 #rock {
